--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>DYP | Digitize Your Process</title>
+<title>Digitize Your Process</title>
 
 <meta name="description" content="Digitize offline and manual business processes into secure, scalable digital workflows with expert digitization consulting.">
 
@@ -214,7 +214,7 @@ footer {
 
 <header>
   <div class="container header-wrap">
-    <img src="Digitizeyourprocess-logo-short.png" alt="DYP Logo" class="logo">
+    <img src="Digitizeyourprocess-logo-short.png" alt="Digitizeyourprocess Logo" class="logo">
     <nav>
       <a href="https://digitizeyourprocess.github.io/digitizeyourprocess/#services">Services</a>
       <a href="https://digitizeyourprocess.github.io/digitizeyourprocess/#approach">Approach</a>
@@ -300,7 +300,7 @@ footer {
 </section>
 
 <footer>
-  © 2026 DYP – Digitize Your Process. All rights reserved.
+  © 2026 Digitize Your Process. All rights reserved.
 </footer>
 <script type="application/ld+json">
 {
