--- a/index.html
+++ b/index.html
@@ -294,7 +294,7 @@ footer {
     Start with a free consultation and see where you can save time,
     reduce errors, and scale operations.
   </p>
-  <a href="mailto:contact@digitizeyourprocess.com" class="btn btn-primary">
+  <a href="mailto:digitizeyourprocess@gmail.com" class="btn btn-primary">
     Talk to a Consultant
   </a>
 </section>
@@ -316,7 +316,7 @@ footer {
   "contactPoint": {
     "@type": "ContactPoint",
     "contactType": "Business Inquiry",
-    "email": "contact@digitizeyourprocess.com"
+    "email": "digitizeyourprocess@gmail.com"
   }
 }
 </script>
