--- a/index.html
+++ b/index.html
@@ -3,6 +3,17 @@
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
+
+<!-- Google tag (gtag.js) -->
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-L2RTZ3WN5D"></script>
+<script>
+  window.dataLayer = window.dataLayer || [];
+  function gtag(){dataLayer.push(arguments);}
+  gtag('js', new Date());
+
+  gtag('config', 'G-L2RTZ3WN5D');
+</script>
+
 <title>Digitize Your Process</title>
 
 <meta name="description" content="Digitize offline and manual business processes into secure, scalable digital workflows with expert digitization consulting.">
