--- a/index.html
+++ b/index.html
@@ -5,13 +5,13 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <!-- Google tag (gtag.js) -->
-<script async src="https://www.googletagmanager.com/gtag/js?id=G-L2RTZ3WN5D"></script>
+<script async src="https://www.googletagmanager.com/gtag/js?id=G-XWTKVZVQHY"></script>
 <script>
   window.dataLayer = window.dataLayer || [];
   function gtag(){dataLayer.push(arguments);}
   gtag('js', new Date());
 
-  gtag('config', 'G-L2RTZ3WN5D');
+  gtag('config', 'G-XWTKVZVQHY');
 </script>
 
 <title>Digitize Your Process</title>
