--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- saved from url=(0058)https://digitizeyourprocess.github.io/ -->
+<!-- saved from url=(0058)https://digitizeyourprocess.com/ -->
 <html lang="en"><head><meta http-equiv="Content-Type" content="text/html; charset=UTF-8">
 
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -227,9 +227,9 @@ footer {
   <div class="container header-wrap">
     <img src="Digitizeyourprocess-logo-short.png" alt="Digitizeyourprocess Logo" class="logo">
     <nav>
-      <a href="https://digitizeyourprocess.github.io/#services">Services</a>
-      <a href="https://digitizeyourprocess.github.io/#approach">Approach</a>
-      <a href="https://digitizeyourprocess.github.io/#contact">Contact</a>
+      <a href="#services">Services</a>
+      <a href="#approach">Approach</a>
+      <a href="#contact">Contact</a>
     </nav>
   </div>
 </header>
@@ -242,8 +242,8 @@ footer {
       into secure, automated, and scalable digital systems.
     </p>
     <div class="hero-actions">
-      <a href="https://digitizeyourprocess.github.io/#contact" class="btn btn-primary">Free Digitization Assessment</a>
-      <a href="https://digitizeyourprocess.github.io/#services" class="btn btn-outline">Our Services</a>
+      <a href="#contact" class="btn btn-primary">Free Digitization Assessment</a>
+      <a href="#services" class="btn btn-outline">Our Services</a>
     </div>
   </div>
 </section>
